--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="227" y="505" width="242" height="400"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FOURCORNERS" translatesAutoresizingMaskIntoConstraints="NO" id="obE-lg-XqY">
-                                <rect key="frame" x="82" y="354.5" width="250" height="197.00000000000006"/>
+                                <rect key="frame" x="82" y="445" width="250" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="zn5-BL-3Kd"/>
                                 </constraints>
