--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="227" y="505" width="242" height="400"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FOURCORNERS" translatesAutoresizingMaskIntoConstraints="NO" id="obE-lg-XqY">
-                                <rect key="frame" x="82" y="354.5" width="250" height="197.00000000000006"/>
+                                <rect key="frame" x="82" y="445" width="250" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="zn5-BL-3Kd"/>
                                 </constraints>
@@ -169,6 +169,9 @@
                                 <state key="normal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPress:" destination="AW2-pI-hdR" eventType="touchUpInside" id="OtM-3h-De0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7u7-ox-HDU" userLabel="Bottom Button">
                                 <rect key="frame" x="0.0" y="696" width="414" height="200"/>
@@ -179,6 +182,9 @@
                                 <state key="normal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPress:" destination="AW2-pI-hdR" eventType="touchUpInside" id="UIX-gr-jFw"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="playerOne" translatesAutoresizingMaskIntoConstraints="NO" id="mqu-P6-HpH">
                                 <rect key="frame" x="-162" y="-220" width="738" height="420"/>
@@ -289,6 +295,9 @@
                                 <state key="normal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPress:" destination="eTN-ZF-Sxj" eventType="touchUpInside" id="ZIE-Lk-qRY"/>
+                                </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZh-o6-ILw" userLabel="Top Right Button">
                                 <rect key="frame" x="244" y="0.0" width="170" height="250"/>
@@ -296,6 +305,9 @@
                                     <constraint firstAttribute="height" constant="250" id="YeI-ci-xz3"/>
                                     <constraint firstAttribute="width" constant="170" id="gyQ-yx-vne"/>
                                 </constraints>
+                                <connections>
+                                    <action selector="buttonPress:" destination="eTN-ZF-Sxj" eventType="touchUpInside" id="sVw-fx-tdm"/>
+                                </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfu-mr-jwM" userLabel="Bottom Left Button">
                                 <rect key="frame" x="244" y="646" width="170" height="250"/>
@@ -307,6 +319,9 @@
                                 <state key="normal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPress:" destination="eTN-ZF-Sxj" eventType="touchUpInside" id="LpM-79-D4o"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="playerOne" translatesAutoresizingMaskIntoConstraints="NO" id="q00-gq-I2d" userLabel="Top Right Image">
                                 <rect key="frame" x="244" y="-12" width="257" height="262"/>
@@ -536,6 +551,9 @@
                                         <state key="normal" title="Exit">
                                             <color key="titleColor" red="0.059087293280000001" green="0.52018559639999995" blue="0.1031346989" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
+                                        <connections>
+                                            <action selector="exitButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K5U-4b-5vT"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
